Fix white space for non pre code

--- a/docs/css/code-highlight/code-highlight.scss
+++ b/docs/css/code-highlight/code-highlight.scss
@@ -12,6 +12,7 @@
 
 .code__line {
     display: block;
+    white-space: pre;
 }
 
 .code--warning {
